Fixed scss in meny so text do not overflow

--- a/src/pages/Menu/Menu.module.scss
+++ b/src/pages/Menu/Menu.module.scss
@@ -2,7 +2,7 @@
     background-color: #F3E4E1;
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
+    
     
     header {
         background-image: url('../../img/header.svg');
@@ -18,10 +18,13 @@
         li {
             margin-bottom: 1.2rem;
             display: grid;
-            grid-template-columns: 8.5% auto 16%;
-            grid-template-rows: 28px 18px;
-            grid-template-areas: "a b c" "a d .";
-            gap: .1rem .5rem;
+            grid-template-columns: 8.5% 63% 18%; /* Ger priset mer utrymme */
+            grid-template-rows: auto auto; /* Låter höjden justeras automatiskt */
+            grid-template-areas: 
+                "a b c" 
+                "a d c"; /* Prisets ruta sträcker sig även i nästa rad */
+            gap: 0.5rem 1rem;
+            overflow: visible; /* Säkerställer att ingen text klipps av */
 
             .addButton {
                 grid-area: a;
@@ -29,13 +32,23 @@
 
             .coffeeName {
                 grid-area: b;
+                white-space: normal; /* Tillåter radbrytning */
+                overflow: visible; /* Säkerställer att texten syns */
+                text-overflow: unset; /* Tar bort "..." */
+                max-width: 100%; /* Gör att texten kan utnyttja tillgängligt utrymme */
             }
             .coffeePrice {
                 grid-area: c;
+                white-space: nowrap;
+                text-align: right;
+                align-self: center; /* Håller priset i linje med namnet */
+            
             }
 
             p {
                 grid-area: d;
+                margin-top: 0.3rem; /* Ger mer utrymme mellan namnet och beskrivningen */
+                line-height: 1.3; /* Ökar avståndet mellan rader */
             }
         }
     }
